Revert "Remove overflow to show tables correctly on mobile"

--- a/Resources/Private/Scss/base.scss
+++ b/Resources/Private/Scss/base.scss
@@ -11,6 +11,7 @@
 	font-weight: 100;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	overflow-x: hidden;
 }
 
 /**
